--- a/src/styles/typewriter.css
+++ b/src/styles/typewriter.css
@@ -1,6 +1,6 @@
 .typewriter {
-    width: 100%;
     display: inline-block;
+    text-align: center;
     border-right: 2px solid black;
     animation: blink 0.7s steps(1) infinite;
   }
